Fixing z-index issue for nav

--- a/components/main_nav/main_nav.css
+++ b/components/main_nav/main_nav.css
@@ -44,6 +44,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    z-index: 2;
 }
 
 [data-component="main_nav"] ul.menu li {
